<resources>
    <string name="app_name">Walk Walk Revolution</string>
    <string name="welcome_prompt">Hello!</string>
    <string name="feet_hint">ft</string>
    <string name="inches_hint">in</string>
    <string name="submit_button">Submit</string>
    <string name="height_prompt">Please input your height:</string>
    <string name="daily_step_update_delay_sec">30</string>
    <string name="steps">Steps</string>
    <string name="default_steps">###</string>
    <string name="start_walk_btn">Start Walk</string>
    <string name="propose_btn">Propose Walk</string>

    <string name="miles_hint">Miles</string>
    <string name="default_miles">###</string>
    <string name="steps_hint">Steps</string>
    <string name="stop_walk_button">Stop Walk</string>
    <string name="mock_button">mock</string>
    <string name="latest_daily_walk">Latest Daily Walk</string>
    <string name="duration_hint">Duration</string>
    <string name="default_latest">N/A</string>
    <string name="user_name">user_name</string>
    <string name="user_email">user_email</string>
    <string name="team_email_prompt">Please enter your teammate\'s email address</string>
    <string name="individual">Individual</string>
    <string name="team">Team</string>
    <string name="no_invitation_text">No invitation was found.</string>

    <string name="Start_Location"><b>Start Location:</b></string>
    <string name="Tags"><b>Tags:</b></string>
    <string name="Notes"><b>Notes:</b></string>
    <string name="date" >Date</string>
    <string name="done">Done</string>
    <string name="time">Time</string>

</resources>
