<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DateAndTimeActivity">

    <Button
        android:id="@+id/btn_date"
        android:layout_width="100sp"
        android:layout_height="72sp"
        android:layout_marginTop="84dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/date"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_time"
        app:layout_constraintTop_toBottomOf="@+id/text_date" />

    <Button
        android:id="@+id/btn_time"
        android:layout_width="100sp"
        android:layout_height="72sp"
        android:layout_marginTop="84dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/time"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_date"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_date" />

    <Button
        android:id="@+id/btn_done"
        android:layout_width="211sp"
        android:layout_height="100sp"
        android:layout_marginTop="56dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/done"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_date" />

    <TextView
        android:id="@+id/text_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="172dp"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:inputType="none" />
</androidx.constraintlayout.widget.ConstraintLayout>